vaultwarden-ton/vaultwarden/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vaultwarden
spec:
  replicas: 1
  selector:
    matchLabels:
      app: vaultwarden
  template:
    metadata:
      labels:
        app: vaultwarden
    spec:
      containers:
      - name: vaultwarden
        image: docker.io/vaultwarden/server:1.37.1-alpine
        ports:
        - containerPort: 80
          name: http
        volumeMounts:
        - name: vaultwarden-data
          mountPath: /data
        resources:
          requests:
            memory: "50Mi"
            cpu: "10m"
          limits:
            memory: "512Mi"
            cpu: "500m"
      volumes:
      - name: vaultwarden-data
        persistentVolumeClaim:
          claimName: vaultwarden-data
