vaultwarden-ton/vaultwarden/ingress-ts.yaml
apiVersion: v1
kind: Service
metadata:
  name: vaultwarden-tailscale
  namespace: vaultwarden
spec:
  selector:
    app: vaultwarden
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
  type: ClusterIP
