vaultwarden-ton/vaultwarden/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: vaultwarden
  labels:
    app: vaultwarden
spec:
  ports:
  - port: 80
    targetPort: 80
    name: http
  selector:
    app: vaultwarden
