vaultwarden-ton/vaultwarden/virtualservice.yaml
---
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: vw
  namespace: vw
spec:
  hosts:
    - vw.lag0.com.br
  gateways:
    - istio-system/lag0-gateway
  http:
    - match:
        - uri:
            prefix: /
      route:
        - destination:
            host: vw
            port:
              number: 80
